fix Spacing issues with thumbnail for product with carousel (GH-4361)

--- a/projects/storefrontstyles/scss/components/cart/_cart-item.scss
+++ b/projects/storefrontstyles/scss/components/cart/_cart-item.scss
@@ -8,6 +8,10 @@
     }
   }
 
+  cx-media {
+    text-align: center;
+  }
+
   cx-media.is-missing {
     min-width: 96px;
   }
